...
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="Genres"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/textViewAlbums2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="Albums"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

...
